Order and payment implemented