@@ -80,19 +80,27 @@ public class CartServiceImpl implements CartService {
 
     @Override
     public List<CartDTO> getAllCarts() {
-        List<Cart> carts=cartRepository.findAll();
-        if(carts.isEmpty()){
+        List<Cart> carts = cartRepository.findAll();
+
+        if (carts.isEmpty()) {
             throw new APIException("No cart exists");
         }
-        return carts.stream()
-                .map(cart->{
-                    CartDTO cartDTO=modelMapper.map(cart,CartDTO.class);
-                    List<ProductDTO> products=cart.getItems().stream()
-                            .map(p->modelMapper.map(p.getProduct(),ProductDTO.class))
-                            .collect(Collectors.toList());
-                    cartDTO.setProducts(products);
-                    return cartDTO;
-                }).toList();
+
+        return carts.stream().map(cart -> {
+            CartDTO cartDTO = modelMapper.map(cart, CartDTO.class);
+
+            List<ProductDTO> products = cart.getItems().stream().map(cartItem -> {
+                ProductDTO productDTO = modelMapper.map(cartItem.getProduct(), ProductDTO.class);
+                productDTO.setQuantity(cartItem.getQuantity()); // Set the quantity from CartItem
+                return productDTO;
+            }).collect(Collectors.toList());
+
+
+            cartDTO.setProducts(products);
+
+            return cartDTO;
+
+        }).collect(Collectors.toList());
     }
 
     @Override
